Settings WebUI: adding retry dictionary download to languageSettingsPrivate API

Bug: 820456
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: Ibaeb426d53d671b54456fd4975a6eebb0934a894
Reviewed-on: https://chromium-review.googlesource.com/969753
Commit-Queue: Esmael El-Moslimany <aee@chromium.org>
Reviewed-by: Michael Giuffrida <michaelpg@chromium.org>
Reviewed-by: Toni Barzic <tbarzic@chromium.org>
Reviewed-by: Jesse Doherty <jwd@chromium.org>
Reviewed-by: Demetrios Papadopoulos <dpapad@chromium.org>
Cr-Commit-Position: refs/heads/master@{#545986}
Former-commit-id: 143e0b110ac69781d62ab02bf29c4ac051a3bc8c